package com.example.blog.enums;

public enum ArticleStatus {
    ACTIVE,
    SUSPENDED
}
