package com.example.blog.enums;

public enum UserRole {
    SUPER_ADMIN,
    ADMIN,
    REDACTEUR,
    USER
}